--- a/frontend/gundam/src/ItemDetail/ItemDetail.css
+++ b/frontend/gundam/src/ItemDetail/ItemDetail.css
@@ -376,7 +376,7 @@
 
 .re_button:hover {
     color: white;
-    background-color: blue;
+    background-color: #004a99;
 }
 
 /* 별점 아이콘 기본 스타일 */
@@ -608,7 +608,7 @@
 }
 
 .count_right_box button:hover {
-    background-color: blue;
+    background-color: #004a99;
     color: white;
 }
 
@@ -813,7 +813,7 @@
 
 .buy_right_subtitle button:hover {
     color: white;
-    background-color: blue;
+    background-color: #004a99;
 }
 
 .buy_item_img {
@@ -898,7 +898,7 @@
 }
 
 .buy_count_box button:hover {
-    background-color: blue;
+    background-color: #004a99;
     color: white;
 }
 
