--- a/frontend/gundam/src/Login/Idfindingid.css
+++ b/frontend/gundam/src/Login/Idfindingid.css
@@ -2,11 +2,10 @@
 .ReactModal__Content {
     
     display: grid;
-    grid-template-rows: repeat(7, 1fr);
+    grid-template-rows: repeat(3, .5fr);
     justify-self: center;
     align-self: center;
-    width: 23%;
-    
+    width: 25%;
     height: 30%;
 }
 
