--- a/frontend/gundam/src/MyPage/MyPage.css
+++ b/frontend/gundam/src/MyPage/MyPage.css
@@ -142,10 +142,13 @@
     grid-area: 1/1/2/5;
 } */
 
+.MypageRight {
+    width: 70%;
+}
 
 .mypageContainer form {
-    width: 70%;
-    height: 80%;
+    width: 100%;
+    /* height: 80%; */
     margin: 0 auto;
     padding: 20px;
     background-color: #f9f9f9;
@@ -228,11 +231,15 @@
 
 .btn_box {
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    /* margin: 0 auto; */
+    /* padding: 20px; */
+    /* justify-content: space-between; */
+    padding: 20px;
 }
 
-.update_btn {
-    margin: 20px 5px;
+.btn_box .update_btn {
+    margin: 0 10px;
     padding: 12px;
     border: none;
     border-radius: 10px;
@@ -246,6 +253,15 @@
     color: white;
 }
 
+.align_left {
+    width: 50%;
+}
+
+.align_right {
+    width: 50%;
+    text-align: right;
+}
+
 /* 회원정보수정 END */
 
 /* pw변경 팝업 START */
@@ -256,9 +272,10 @@
 }
 
 .pop_btn {
-    width: 70px;
+    width: 60px;
     height: 30px;
     margin: 5px;
+    padding: 5px;
     border: none;
     border-radius: 10px;
 }
@@ -266,6 +283,18 @@
 .pop_btn:hover {
     color: white;
     background-color: #004a99;
+}
+
+.id_pw_box {
+    text-align: center;
+}
+
+.id_pw_box .update_btn {
+    height: 30px;
+    margin: 5px;
+    padding: 5px;
+    border: none;
+    border-radius: 10px;
 }
 
 /* pw변경 팝업 END */
