--- a/frontend/gundam/src/Login/Idfindingid.css
+++ b/frontend/gundam/src/Login/Idfindingid.css
@@ -1,8 +1,7 @@
-
 .ReactModal__Content {
-    
+
     display: grid;
-    grid-template-rows: repeat(3, .5fr);
+    grid-template-rows: repeat(7, 1fr);
     justify-self: center;
     align-self: center;
     width: 25%;
@@ -19,7 +18,7 @@
     align-self: center;
     width: 30%;
     height: 100%;
-    
+
 }
 
 .FindID {
@@ -36,6 +35,7 @@
     margin-top: 5%;
 
 }
+
 @font-face {
     font-family: 'LINESeedKR-Bd';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/LINESeedKR-Bd.woff2') format('woff2');
@@ -49,20 +49,28 @@
     font-weight: normal;
     font-style: normal;
 }
+
 @media (max-width: 768px) {
     .ReactModal__Content {
-        width: 80%; /* 모바일 화면에서 모달의 너비를 늘림 */
-        height: auto; /* 모바일 화면에서 모달의 높이를 내용에 맞게 조정 */
-        grid-template-rows: repeat(7, auto); /* 모바일 화면에서 그리드 행의 높이를 내용에 맞게 조정 */
+        width: 80%;
+        /* 모바일 화면에서 모달의 너비를 늘림 */
+        height: auto;
+        /* 모바일 화면에서 모달의 높이를 내용에 맞게 조정 */
+        grid-template-rows: repeat(7, auto);
+        /* 모바일 화면에서 그리드 행의 높이를 내용에 맞게 조정 */
     }
 
     .ReactModal__Content>button {
-        width: 60%; /* 모바일 화면에서 버튼의 너비를 늘림 */
-        height: auto; /* 모바일 화면에서 버튼의 높이를 내용에 맞게 조정 */
+        width: 60%;
+        /* 모바일 화면에서 버튼의 너비를 늘림 */
+        height: auto;
+        /* 모바일 화면에서 버튼의 높이를 내용에 맞게 조정 */
     }
 
     .FindID {
-        left: 23%; /* 모바일 화면에서 버튼의 위치 조정 */
-        font-size: 18px; /* 모바일 화면에서 폰트 크기를 늘림 */
+        left: 23%;
+        /* 모바일 화면에서 버튼의 위치 조정 */
+        font-size: 18px;
+        /* 모바일 화면에서 폰트 크기를 늘림 */
     }
 }
