--- a/frontend/gundam/src/ItemDetail/ItemDetail.css
+++ b/frontend/gundam/src/ItemDetail/ItemDetail.css
@@ -680,12 +680,12 @@
     font-weight: bold;
 }
 
-/* .info_top_box .info_top_center {
+.info_top_box .info_top_center {
     width: 50%;
     font-size: 20px;
     font-weight: bold;
     text-align: left;
-} */
+}
 
 .info_top_box .info_top_right {
     width: 50%;
