--- a/frontend/gundam/src/Login/Login.css
+++ b/frontend/gundam/src/Login/Login.css
@@ -119,8 +119,8 @@
 }
 
 .input {
-    font-size: 15px;
-    color: #fff;
+    font-size: 16px;
+    /* color: #fff; */
     line-height: 1.2;
     border: none;
     display: block;
