--- a/frontend/gundam/src/join/SignupForm.css
+++ b/frontend/gundam/src/join/SignupForm.css
@@ -59,12 +59,20 @@
 .form-group button {
     width: 60px;
     border: none;
-    border-radius: 10px;
+    border-radius: 10px;  
 }
 
+.signup-form>.submitbtn:hover,
 .form-group button:hover {
     color: white;
-    background-color: blue;
+    background-color: #0066cc;
+}
+
+.signup-form>.submitbtn {
+    width: 100%;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
 }
 
 .id_div .id_input{
